# pose-est-backend-2025

./: .dockerignore  .env.example  .gcloudignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  export_openapi.py  guidelines.md  pyproject.toml  todo-list.md
.github/workflows/: ci.yml  deploy.yml
docs/: deployment.md  index.html  openapi.yaml  presigned-url-handover.md  storage-maintenance.md  troubleshooting-20260116.md
scripts/: check.sh
src/posture_estimation/: main.py
src/posture_estimation/api/: __init__.py  dependencies.py  exceptions.py  middleware.py  router.py  schemas.py
src/posture_estimation/application/: __init__.py  dtos.py  use_cases.py
src/posture_estimation/core/: __init__.py  containers.py
src/posture_estimation/domain/: entities.py  exceptions.py  interfaces.py  values.py
src/posture_estimation/infrastructure/ml/: movenet_estimator.py
src/posture_estimation/infrastructure/storage/: r2_service.py  temp_manager.py
src/posture_estimation/infrastructure/video/: ffmpeg_merger.py  ffmpeg_sink.py  opencv_sink.py  opencv_source.py  visualizer.py
tests/: conftest.py  test_main.py
tests/api/: __init__.py  test_middleware.py  test_router.py
tests/application/: test_process_video_use_case.py
tests/core/: test_containers.py
tests/domain/: test_entities.py  test_values.py
tests/infrastructure/ml/: test_movenet_estimator.py
tests/infrastructure/storage/: test_r2_service.py  test_temp_manager.py
tests/infrastructure/video/: test_ffmpeg_merger.py  test_ffmpeg_sink.py  test_opencv_sink.py  test_opencv_source.py  test_visualizer.py
