[tool.poetry]
name = "pose-est-backend"
version = "0.1.0"
description = "Backend API for Pose Estimation with TensorFlow MoveNet"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "posture_estimation", from = "src"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["pose-estimation", "computer-vision", "fastapi", "tensorflow"]
homepage = "https://github.com/yourusername/pose-est-backend"
repository = "https://github.com/yourusername/pose-est-backend"
documentation = "https://yourusername.github.io/pose-est-backend/"

[tool.poetry.dependencies]
python = "^3.11.14"
fastapi = "^0.127.1"
tensorflow = {version = "2.18.1", markers = "sys_platform == 'linux'"}
opencv-python = "^4.12.0.88"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
numpy = "^2.0.2"
pydantic = {extras = ["email"], version = "^2.7.1"}
dependency-injector = "^4.41.0"
tensorflow-hub = "^0.16.1"  # MoveNetモデルのために追加
pillow = "^12.0.0"  # 画像処理のために追加
python-multipart = "^0.0.21"  # ファイルアップロードのために追加

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.10"
mypy = "^1.19.0"
httpx = "^0.28.1"
pre-commit = "^4.5.1"
types-requests = "^2.31.0"
jupyter = "^1.1.1"
ipython = "^9.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C90", # mccabe complexity
    "N",   # pep8-naming
    "D",   # pydocstyle
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "ISC", # flake8-implicit-str-concat
    "RUF", # Ruff-specific rules
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "ARG", # flake8-unused-arguments
    "ASYNC", # flake8-async
]
lint.ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D106", # Missing docstring in public nested class
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "D400", # First line should end with a period
    "D413", # Missing blank line after last section
    "D415", # First line should end with a period, question mark, or exclamation point
    "E501", # Line too long (handled by black)
]
target-version = "py311"

[tool.ruff.format]
# Ruffをフォーマッタとして使用（Blackを代替）
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports allowed in __init__.py
"tests/*" = ["S101"]      # allow assert in tests

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "tensorflow_hub.*",
    "cv2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "strict"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/alembic/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
